typescript/checker/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesProtectedMembers2.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            21,
        ),
        hi: BytePos(
            22,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesProtectedMembers2.ts:2:5
  |
2 | var x: { foo: string; }
  |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            46,
        ),
        hi: BytePos(
            47,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesProtectedMembers2.ts:3:5
  |
3 | var y: { foo: string; bar: string; }
  |     ^

error: unimplemented
expand_export_info(Derived)
File: $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesProtectedMembers2.ts
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesProtectedMembers2.ts:38:18
   |
38 | var d: Derived = new Derived(y);
   |                  ^^^^^^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1004,
        ),
        hi: BytePos(
            1005,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesProtectedMembers2.ts:39:10
   |
39 | var r1 = d.a;
   |          ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1019,
        ),
        hi: BytePos(
            1020,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesProtectedMembers2.ts:40:10
   |
40 | var r2 = d.b(y);
   |          ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1037,
        ),
        hi: BytePos(
            1038,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesProtectedMembers2.ts:41:10
   |
41 | var r3 = d.c;
   |          ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            1053,
        ),
        hi: BytePos(
            1054,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesProtectedMembers2.ts:42:11
   |
42 | var r3a = d.d;
   |           ^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            1106,
        ),
        hi: BytePos(
            1108,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesProtectedMembers2.ts:45:17
   |
45 | var r5 = Derived.s(y);
   |                 ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            1346,
        ),
        hi: BytePos(
            1348,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesProtectedMembers2.ts:60:5
   |
60 | var d2: Derived2;
   |     ^^

